--- a/src/styles/Form.css
+++ b/src/styles/Form.css
@@ -18,6 +18,38 @@
   gap: 20px;
 }
 
+.post {
+  gap: 0;
+  align-items: start;
+}
+
+.label-title {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.container-image {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  margin-bottom: 10px;
+}
+
+.wrapper-image {
+  display: flex;
+  flex-direction: row;
+  gap: 5px;
+}
+
+.container-image img {
+  width: 80px;
+  height: 80px;
+  border-radius: 5px;
+  border: solid 1px;
+}
+
 .form-element {
   width: 100%;
   display: flex;
@@ -26,7 +58,7 @@
 }
 
 .forms label {
-  display: block;
+  display: flex;
   margin-bottom: 0.7rem;
   color: #004aad;
   font-weight: 500;
@@ -45,11 +77,25 @@
     margin: 0;
 }
 
+.from-textarea {
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  width: 100%;
+  height: 300px;
+  padding: 20px;
+}
+
 .button-wrapper {
     width: 100%;
     display: flex;
     flex-direction: column;
     gap: 10px;
+}
+
+.form-group {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .google-sign-in-button {
@@ -94,4 +140,11 @@
     background-color: #ebebeb;
     box-shadow: 0 -1px 0 rgba(0, 0, 0, .04), 0 1px 1px rgba(0, 0, 0, .25);
     cursor: not-allowed;
+}
+
+@media (max-width: 425px) {
+  .wrapper-image img {
+    width: 50px;
+    height: 50px;
+  }
 }
