--- a/src/styles/Form.css
+++ b/src/styles/Form.css
@@ -1,15 +1,15 @@
 .form-container {
   width: 100%;
-  height: 100vh;
   display: flex;
   justify-content: center;
   background-color: #f4f4f4;
+  height: 100vh;
 }
 
 .forms {
   width: 500px;
   max-height: fit-content;
-  margin: 20px;
+  margin: 50px;
   border: 1px solid #ccc; /* Light border */
   border-radius: 8px; /* Rounded corners */
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Shadow effect */
@@ -25,6 +25,9 @@
 .post {
   gap: 0;
   align-items: start;
+  margin: 20px;
+  height: auto;
+  max-height: fit-content;
 }
 
 .label-title {
